--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,10 +37,17 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
 
-    - name: Run GoReleaser
-      uses: goreleaser/goreleaser-action@master
+    - name: GoReleaser Action
+      uses: goreleaser/goreleaser-action@v3.0.0
       with:
         version: latest
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
+    -
+      name: Upload relases
+      uses: actions/upload-artifact@v3
+      with:
+        name: my-artifact
+        path: dist/*
+        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
