--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,16 +38,10 @@ jobs:
         password: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
 
     - name: GoReleaser Action
-      uses: goreleaser/goreleaser-action@v3.0.0
+      uses: goreleaser/goreleaser-action@v3
       with:
+        distribution: goreleaser
         version: latest
         args: release --rm-dist
       env:
         GITHUB_TOKEN: ${{ secrets.GO_RELEASER_GITHUB_TOKEN }}
-    -
-      name: Upload relases
-      uses: actions/upload-artifact@v3
-      with:
-        name: my-artifact
-        path: dist/*
-        if-no-files-found: error # 'warn' or 'ignore' are also available, defaults to `warn`
